@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2025-04-06T00:57:08Z",
-  "count_outdated" : 251,
-  "uniques_outdated" : 185,
-  "count" : 253,
-  "uniques" : 187,
+  "timestamp" : "2025-04-28T00:57:15Z",
+  "count_outdated" : 253,
+  "uniques_outdated" : 187,
+  "count" : 254,
+  "uniques" : 188,
   "clones" : [
     {
-      "timestamp": "2025-03-30T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "timestamp": "2025-04-27T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
