@@ -1,11 +1,11 @@
 {
-  "count": 2,
-  "uniques": 2,
+  "count": 1,
+  "uniques": 1,
   "clones": [
     {
-      "timestamp": "2025-03-30T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "timestamp": "2025-04-27T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
